--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/josephdaw/wake-up-cron/issues"
   },
-  "homepage": "https://github.com/josephdaw/wake-up-cron#readme"
+  "homepage": "https://github.com/josephdaw/wake-up-cron#readme",
+  "dependencies": {
+    "http": "^0.0.1-security",
+    "node-cron": "^3.0.0"
+  }
 }
